<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_address_add">

    <fragment
        android:id="@+id/nav_home"
        android:name="uz.xia.taxi.ui.home.HomeFragment"
        android:label=""
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_driver"
        android:name="uz.xia.taxi.ui.settings.SettingsFragment"
        android:label="@string/menu_driver"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/nav_address"
        android:name="uz.xia.taxi.ui.address.AddressFragment"
        android:label="@string/menu_address"
        tools:layout="@layout/fragment_address" />
    <fragment
        android:id="@+id/nav_settings"
        android:name="uz.xia.taxi.ui.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/nav_address_add"
        android:name="uz.xia.taxi.ui.address.add.AddAddressFragment"
        android:label="@string/menu_address"
        tools:layout="@layout/fragment_address" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="uz.xia.taxi.ui.profile.ProfileFragment"
        android:label=""
        tools:layout="@layout/fragment_profile" />
</navigation>