<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/appCompatImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_minus_svgrepo_com" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvAddressType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/address_type"
        android:textColor="@color/colorTextBlack"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appCompatImageView" />

    <uz.xia.taxi.widget.SimpleSpinner
        android:id="@+id/sp_address_type"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="4dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/shape_for_spinner_bg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvAddressType" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvAddressName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="18dp"
        android:text="@string/address_name"
        android:textColor="@color/colorTextBlack"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sp_address_type" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/addressNameInputLayout"
        style="@style/Widget.TextInputLayout.Primary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="4dp"
        android:layout_marginRight="16dp"
        app:hintEnabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvAddressName">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_address_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_address_name"
            android:imeOptions="actionNext"
            android:padding="14dp"
            android:singleLine="true"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_address_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="18dp"
        android:text="@string/address"
        android:textColor="@color/colorTextBlack"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addressNameInputLayout" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/addressDescriptionInputLayout"
        style="@style/Widget.TextInputLayout.Primary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="4dp"
        android:layout_marginRight="16dp"
        app:hintEnabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_address_description">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_address_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_address"
            android:imeOptions="actionNext"
            android:padding="14dp"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/ll_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="12dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="12dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addressDescriptionInputLayout">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/button_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/circle_rounded_regulary"
            android:gravity="center"
            android:padding="12dp"
            android:text="@string/cancel"
            android:textColor="@color/colorTextCancelButton"
            android:textSize="18dp"
            app:fontFamily="@font/circle_rounded_regulary" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/button_conform"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/shape_button_primary"
            android:fontFamily="@font/circle_rounded_regular_bold"
            android:gravity="center"
            android:padding="12dp"
            android:text="@string/next"
            android:textColor="@color/colorWhite"
            android:textSize="18dp"
            android:textStyle="bold"
            app:fontFamily="@font/circle_rounded_regular_bold" />
    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.constraintlayout.widget.ConstraintLayout>
