<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:outlineAmbientShadowColor="@color/colorAmbientShadowColor"
    android:outlineSpotShadowColor="@color/colorSpotShadowColor"
    app:cardBackgroundColor="@color/colorWhite"
    app:cardCornerRadius="10dp"
    app:cardElevation="1dp"
    app:cardMaxElevation="1dp"
    app:cardUseCompatPadding="true"
    >
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="12dp"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/select_language"
                android:textColor="@color/colorTextBlack"
                android:textSize="18dp" />

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/btn_close_top"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:background="@drawable/ripple_selectable_close"
                android:src="@drawable/ic_close"
                />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <View
            android:layout_width="wrap_content"
            android:layout_height="0.7dp"
            android:background="@color/colorTextGrayHolo" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/btn_lang_latin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin"
            android:background="@drawable/ripple_selectable_lang"
            android:drawablePadding="12dp"
            android:gravity="center_vertical"
            android:paddingStart="16dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:paddingEnd="8dp"
            android:text="@string/language_uz"
            android:textColor="@color/colorTextBlack"
            android:textSize="16dp"
            app:drawableStartCompat="@drawable/ic_lang_uz"
            android:fontFamily="@font/circle_rounded_regulary"
            app:fontFamily="@font/circle_rounded_regulary" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/btn_lang_krill"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/ripple_selectable_lang"
            android:drawablePadding="12dp"
            android:gravity="center_vertical"
            android:paddingStart="16dp"
            android:paddingTop="8dp"
            android:paddingEnd="8dp"
            android:paddingBottom="8dp"
            android:text="@string/language_uz_krill"
            android:textColor="@color/colorTextBlack"
            android:textSize="16dp"
            app:drawableStartCompat="@drawable/ic_lang_uz"
            android:fontFamily="@font/circle_rounded_regulary"
            app:fontFamily="@font/circle_rounded_regulary"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/btn_lang_ru"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/ripple_selectable_lang"
            android:drawablePadding="12dp"
            android:gravity="center_vertical"
            android:paddingStart="16dp"
            android:paddingTop="8dp"
            android:paddingEnd="8dp"
            android:paddingBottom="8dp"
            android:text="@string/language_ru"
            android:textColor="@color/colorTextBlack"
            android:textSize="16dp"
            app:drawableStartCompat="@drawable/ic_lang_ru"
            android:fontFamily="@font/circle_rounded_regulary"
            app:fontFamily="@font/circle_rounded_regulary"
            />
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/btn_lang_eng"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin"
            android:background="@drawable/ripple_selectable_lang"
            android:drawablePadding="12dp"
            android:gravity="center_vertical"
            android:paddingStart="16dp"
            android:paddingTop="8dp"
            android:paddingEnd="8dp"
            android:paddingBottom="8dp"
            android:text="@string/language_en"
            android:textColor="@color/colorTextBlack"
            android:textSize="16dp"
            app:drawableStartCompat="@drawable/ic_lang_en"
            android:fontFamily="@font/circle_rounded_regulary"
            app:fontFamily="@font/circle_rounded_regulary"
            />
        <View
            android:layout_width="wrap_content"
            android:layout_height="0.7dp"
            android:background="@color/colorTextGrayHolo"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/btn_close_footer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_margin="@dimen/margin_large"
            android:background="@drawable/ripple_selectable_lang_close_button"
            android:paddingStart="16dp"
            android:paddingTop="8dp"
            android:paddingEnd="16dp"
            android:paddingBottom="8dp"
            android:text="@string/close"
            android:textAllCaps="false"
            android:textColor="@color/colorTextWhite" />
    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.cardview.widget.CardView>
