<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/llc_map_app"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/llc_yandex"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/ripple_selectable_lang"
        android:clickable="true"
        android:focusable="true"
        android:orientation="horizontal"
        android:paddingTop="8dp"
        android:paddingBottom="8dp">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="16dp"
            android:elevation="4dp"
            android:src="@drawable/icon_yandex_nav" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_yandex_map"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="8dp"
            android:text="@string/yandex_navigator"
            android:textColor="@color/colorBlack"
            android:textSize="16dp" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/llc_google"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/ripple_selectable_lang"
        android:clickable="true"
        android:focusable="true"
        android:orientation="horizontal"
        android:paddingTop="8dp"
        android:paddingBottom="8dp">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="16dp"
            android:elevation="4dp"
            android:src="@drawable/ic_google_maps" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_google_map"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="8dp"
            android:text="@string/google_maps"
            android:textColor="@color/colorBlack"
            android:textSize="16dp" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.AppCompatCheckBox
        android:id="@+id/chb_only_choosing_this"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:text="@string/only_use_this_map_app"
        android:textSize="14dp" />

</androidx.appcompat.widget.LinearLayoutCompat>
